--- a/views/book/list.pug
+++ b/views/book/list.pug
@@ -9,10 +9,10 @@ block content
 				th 발행일
 				th 내용
 		tbody
-
-			tr
-				td 1
-				td.text-left 홍길동전
-				td 홍길동
-				td 1450-01-11
-				td.text-left 아버지를 아버지라...
+			each v in lists
+				tr
+					td= v.id
+					td.text-left= v.title
+					td= v.writer
+					td= v.wdate
+					td.text-left= v.content
