error 페이지 만들기

--- a/views/book/list.pug
+++ b/views/book/list.pug
@@ -1,4 +1,4 @@
-extends ../layout/lo-dafult.pug
+extends ../layout/lo-default.pug
 block content
 	table.table.table-hover.text-center.list-table
 		thead.thead-dark
