--- a/public/css/book-list.css
+++ b/public/css/book-list.css
@@ -10,13 +10,11 @@
 .list-table tr th:nth-child(4) {
   width: 12%;
 }
-
 @media screen and (max-width: 767px) {
-  th:nth-child(1), th:nth-child(3), th:nth-child(4) {
+  .list-table tr th:nth-child(1), .list-table tr th:nth-child(3), .list-table tr th:nth-child(4) {
     display: none;
   }
-
-  td:nth-child(1), td:nth-child(3), td:nth-child(4) {
+  .list-table tr td:nth-child(1), .list-table tr td:nth-child(3), .list-table tr td:nth-child(4) {
     display: none;
   }
 }
