--- a/views/book/write.pug
+++ b/views/book/write.pug
@@ -1,2 +1,25 @@
 extends ../layout/lo-default.pug
 block content
+	form(name="bookForm" action="/book/save" method="post")
+		table.table.td-write
+			tbody
+				tr
+					td.title 제목
+					td.content
+						input.form-control(type="text" name="title" placeholder="제목을 입력하세요.")
+				tr
+					td.title 저자
+					td.content
+						input.form-control(type="text" name="write" placeholder="저자을 입력하세요.")
+				tr
+					td.title 발행일
+					td.content
+						input.form-control(type="date" name="wdate")
+				tr
+					td.title 내용
+					td.content
+						textarea.form-control(name="content" placeholder="내용을 입력하세요.")
+		hr
+		.text-center
+			button.btn.btn-primary 등록
+			button.btn.btn-danger(type="reset") 다시작성
