--- a/public/css/error.css
+++ b/public/css/error.css
@@ -4,4 +4,4 @@ html, body {background-color: #f8f8f1;}
 .wrapper .wrap > div {display: flex; align-items: center;}
 .wrapper .wrap .img-wrap {flex: 150px 0 0;}
 .wrapper .wrap .code-wrap {padding-left: 2rem;}
-.wrapper .wrap .error-wrap {font-size: 1.25rem; padding: 1rem 0;}
+.wrapper .wrap .error-wrap {font-size: 1.25rem; padding: 1rem 0.3rem 0;}
