--- a/views/layout/lo-default.pug
+++ b/views/layout/lo-default.pug
@@ -4,7 +4,7 @@ html(lang="ko")
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		include ../include/inc-style.pug
-		link(rel="stylesheet" href=`css/${file ? file : 'index'}.css`)
+		link(rel="stylesheet" href=`/css/${file ? file : 'index'}.css`)
 		include ../include/inc-script.pug
 	body
 		header.header-wrapper
