첨부파일 업로드

--- a/public/css/book-update.css
+++ b/public/css/book-update.css
@@ -1,5 +1,5 @@
 .tb-write .title {
-  border-bottom: 2px solid #f8b4b4;
+  border-bottom: 2px solid #c2f8b2;
   font-weight: bold;
 }
 .tb-write textarea {
