--- a/views/layout/lo-default.pug
+++ b/views/layout/lo-default.pug
@@ -1,8 +1,8 @@
 doctype html
 html(lang="ko")
 	head
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		meta(charset="UTF-8")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 		include ../include/inc-style.pug
 		link(rel="stylesheet" href=`/css/${file ? file : 'index'}.css`)
 		include ../include/inc-script.pug
