첨부파일 수정중

--- a/public/scss/color.scss
+++ b/public/scss/color.scss
@@ -1,4 +1,8 @@
 $defColor: #222;
 $activeColor: #fae9ce;
+$lighterColor: #dee2e6;
 $lightColor:#999;
+$middleColor:#555;
+$darkColor:#111;
 $selBg:#7c106a;
+$iconBg:#da4227;
