--- a/views/include/inc-titlebar.pug
+++ b/views/include/inc-titlebar.pug
@@ -4,5 +4,5 @@
 	hr
 	if file == 'book-list'
 		a.btn.btn-primary(href="/book/write") 도서등록
-	if file == 'book-write' || file == 'book-update'
+	if file == 'book-write' || file == 'book-update' || file == 'book-view'
 		a.btn.btn-info(href="/book/list") 도서리스트
