--- a/views/book/list.pug
+++ b/views/book/list.pug
@@ -13,10 +13,13 @@ block content
 			each v in lists
 				tr
 					td= v.id
-					td.text-left= v.title
+					td.text-left
+						a(href=`/book/view/${v.id}`)= v.title
 					td= v.writer
 					td= v.wdate
 					td.text-left= v.content
+						if v.icon
+							span.icon= v.icon
 					td
 						a(href=`javascript: onUpdate(${v.id});`)
 							i.fa.fa-edit
