--- a/views/multer/write.pug
+++ b/views/multer/write.pug
@@ -3,8 +3,8 @@ block content
 	.container
 		.jumbotron.my-3
 			h1 파일업로드
-		form(mathod="post" action="/multer/save" enctype="multipart/form-data")
-			input.form-control.my-2(type="text" name="title" placeholder="제목을 입력하세요.")
-			input.form-control-file.my-2(type="file" name="upfile" placeholder="첨부파일을 등록하세요.")
+		form(method="post" action="/multer/save" enctype="multipart/form-data")
+			input.form-control.my-2(type="text" name="title" placeholder='제목을 입력하세요')
+			input.form-control-file.my-2(type="file" name="upfile" placeholder='첨부파일을 등록하세요')
 			hr
 			button.btn.btn-primary.my-2 저장
