--- a/views/include/inc-style.pug
+++ b/views/include/inc-style.pug
@@ -1,3 +1,3 @@
-link(rel="stylesheet", href="/css/all.min.css")
-link(rel="stylesheet", href="/css/bootstrap.min.css")
-link(rel="stylesheet", href="/css/base.css")
+link(rel="stylesheet" href="/css/all.min.css")
+link(rel="stylesheet" href="/css/bootstrap.min.css")
+link(rel="stylesheet" href="/css/base.css")
