--- a/views/layout/lo-minimal.pug
+++ b/views/layout/lo-minimal.pug
@@ -2,11 +2,10 @@ doctype html
 html(lang="ko")
 	head
 		meta(charset="UTF-8")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		link(rel="stylesheet", href="/css/bootstrap.min.css")
-		link(rel="stylesheet", href="/css/base.css")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+		link(rel="stylesheet" href="/css/bootstrap.min.css")
+		link(rel="stylesheet" href="/css/base.css")
 		block style
 		block script
 	body
 		block content
-		
