--- a/views/book/list.pug
+++ b/views/book/list.pug
@@ -25,3 +25,4 @@ block content
 							i.fa.fa-edit
 						a(href=`javascript: onDelete(${v.id});`).ml-2
 							i.fa.fa-trash-alt
+	include ../include/pager.pug
