--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -45,3 +45,10 @@ header.header-wrapper {
 		margin-left: 1em;
 	}
 }
+
+.divide{
+	width: 0;
+	height: 30px;
+	border-left: 1px solid #999;
+	margin: 0 1em;
+}
