--- a/views/include/inc-nav.pug
+++ b/views/include/inc-nav.pug
@@ -13,3 +13,22 @@
 	else
 		.navi
 			a(href="/book/write") BOOK Write
+	.divide
+	if file == 'user-join'
+		.navi.active
+			a(href="/user/join") Join
+	else
+		.navi
+			a(href="/user/join") Join
+	if file == 'user-login'
+		.navi.active
+			a(href="/user/login") Login
+	else
+		.navi
+			a(href="/user/login") Login
+	if file == 'user-logout'
+		.navi.active
+			a(href="/user/logout") Logout
+	else
+		.navi
+			a(href="/user/logout") Logout
