--- a/views/user/join.pug
+++ b/views/user/join.pug
@@ -2,6 +2,10 @@ extends ../layout/lo-default.pug
 
 block content
 	form(name='joinForm' action='/user/save' method='post' onsubmit='return onJoin(this)')
+		input(type="hidden" name="validUserid" value="")
+		input(type="hidden" name="validUserpw" value="")
+		input(type="hidden" name="validUsername" value="")
+		input(type="hidden" name="validEmail" value="")
 		table.table.border-bottom
 			tbody
 				tr
