--- a/views/book/list.pug
+++ b/views/book/list.pug
@@ -21,6 +21,7 @@ block content
 						if v.icon
 							span.icon= v.icon
 					td
+						if user && user.id == v.uid
 						a(href=`javascript: onUpdate(${v.id});`)
 							i.fa.fa-edit
 						a(href=`javascript: onDelete(${v.id});`).ml-2
